r99 - september, 11, 2009
    * schema.yml : new PiwamData private table
    * schema.yml : CASCADE deletion for config_ and acl_ tables
    * symfony propel-build-all
    * Configurator.class.php : get > if the variable has not been set in the
      database, the default value is returned if it has been given as parameter
    * error.html.php : error page has been customized


r98 - september, 11, 2009
    * /web/favicon.ico : new favicon file
    * layout.php : reference to favicon.ico has been updated
    * membre : templates > index > legend to show the meaning of "red"
      background
    * /apps/front/config/factories.yml : logger class has been set up
    * /apps/front/config/settings.yml : logging is enabled for prod env
    

r97 - september, 11, 2009
    * cotisation : _form.php > fixes bug #22 (AJAX behaviour when installation
      without virtualhost)
    

r96 - september, 11, 2009
    * /web/index.php : exception message if error occured
    * /apps/front/config/error/error.html.php : new file. Custom exception page
    * cotisationtype : actions > edit > fixed bug > test if we are allowed to
      edit the entry
    * updates/1.1.0beta2-to-1.1 : r96.sql > Changing years of validity by months
      of validity
    * /lib/misc/DateTools.class.php : new class file
    * Membre.php : isAjourCotisation() is up to date
    * cotisationtype : _form.php > label of field 'validity' is up to date (year
      is now months)
    

r95 - august, 14, 2009
	* test_data.yml : reference to object 'private_user' have been updated
	* associationActionsTest.php : refactored code and 1 test has been commented
	  to allow tests to be launched more than one time


r94 - august, 14, 2009
	* piwam-install.sql : error in constraint name 'acl_action_FK_1' has been
	  fixed
	* /data/updates/1.1.0beta-to-1.1/r92.sql : error in constraint name 
	  'acl_action_FK_1' has been fixed


r93 - august, 14, 2009
	* piwam-install.sql : explicit DB names have been removed